--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
  Theming related includes
 ************************/
 
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 @include mat.core();
 
 
