--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,16 @@
 ************************/
 
 @import '@angular/material/theming';
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 
 
 /************************
@@ -111,7 +120,7 @@ $light-accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $light-theme:   mat.define-light-theme($light-primary, $light-accent);
 
 .light-theme {
-  @include mat.all-component-themes($light-theme);
+  @include mat.all-legacy-component-themes($light-theme);
   @include custom-components-theme($light-theme);
 }
 
@@ -122,7 +131,7 @@ $dark-warn:    mat.define-palette(mat.$deep-orange-palette);
 $dark-theme:   mat.define-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
 .dark-theme {
-  @include mat.all-component-themes($dark-theme);
+  @include mat.all-legacy-component-themes($dark-theme);
   @include custom-components-theme($dark-theme);
 }
 
