--- a/src/app/components/list/consolidated-view/consolidated-view.component.html
+++ b/src/app/components/list/consolidated-view/consolidated-view.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="cleaned" class="pc-consol">
+<div *ngIf="cleaned">
 
   <mat-accordion multi="true" displayMode='flat' class="cpc">
     <mat-expansion-panel
