--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,11 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
-
 
 /************************
  Theming related includes
 ************************/
 
-@import '@angular/material/theming';
+@import "@angular/material/theming";
 // TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
 //  The following line adds:
 //    1. Default typography styles for all components
@@ -18,7 +17,6 @@
 @include mat.all-legacy-component-typographies();
 @include mat.legacy-core();
 
-
 /************************
  Default global styles
 ************************/
@@ -29,7 +27,8 @@ body {
   min-height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -115,9 +114,17 @@ body {
 }
 
 // Light theme
-$light-primary: mat.define-palette(mat.$indigo-palette);
-$light-accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$light-theme:   mat.define-light-theme($light-primary, $light-accent);
+$light-primary: mat.define-palette(mat.$indigo-palette, 500);
+$light-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$light-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $light-primary,
+      accent: $light-accent,
+    ),
+    density: 0,
+  )
+);
 
 .light-theme {
   @include mat.all-legacy-component-themes($light-theme);
@@ -125,13 +132,21 @@ $light-theme:   mat.define-light-theme($light-primary, $light-accent);
 }
 
 // Dark theme
-$dark-primary: mat.define-palette(mat.$blue-grey-palette);
-$dark-accent:  mat.define-palette(mat.$amber-palette, A200, A100, A400);
-$dark-warn:    mat.define-palette(mat.$deep-orange-palette);
-$dark-theme:   mat.define-dark-theme($dark-primary, $dark-accent, $dark-warn);
+$dark-primary: mat.define-palette(mat.$blue-grey-palette, 500);
+$dark-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
+$dark-warn: mat.define-palette(mat.$deep-orange-palette);
+$dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $dark-primary,
+      accent: $dark-accent,
+      warn: $dark-warn,
+    ),
+    density: 0,
+  )
+);
 
 .dark-theme {
-  @include mat.all-legacy-component-themes($dark-theme);
+  @include mat.all-component-colors($dark-theme);
   @include custom-components-theme($dark-theme);
 }
-
