--- a/src/app/components/list/check-list/check-list.component.html
+++ b/src/app/components/list/check-list/check-list.component.html
@@ -1,14 +1,14 @@
-<div *ngIf="isQuick" cdkDropList [ngClass]="{'marge-50': !fromConsol}" class='scroll-container pad10' #scrollzone1 (cdkDropListDropped)="itemDrop($event)">
+<div *ngIf="isQuick" cdkDropList [ngClass]="{'marge-50': !fromConsol}" class='scroll-container' #scrollzone1 (cdkDropListDropped)="itemDrop($event)">
   <div [longPress]="fromConsol" (mouseLongPress)="longPress(item.id)"
       (cdkDragStarted)="dragging=true"
       (cdkDragEnded)="dragging=false"
-      *ngFor="let item of header.items" class='pad10 my-pad' cdkDrag>
+      *ngFor="let item of header.items" class='my-pad' cdkDrag>
     <div class="drag-placeholder" *cdkDragPlaceholder></div>
     <app-check-item [item]="item" [isQuick]="isQuick" (checkChange)="onCheckChange()"></app-check-item>
   </div>
 </div>
 
-<div *ngIf="!isQuick" [ngClass]="{'marge-50': !fromConsol}" class='scroll-container pad10' #scrollzone1>
+<div *ngIf="!isQuick" [ngClass]="{'marge-50': !fromConsol}" class='scroll-container' #scrollzone1>
   <div *ngFor="let item of header.items" class='pad10 my-pad'>
     <app-check-item [item]="item" [isQuick]="isQuick" (checkChange)="onCheckChange()"></app-check-item>
   </div>
