--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu&nbsp;<span class='small-font'>2.4.3</span></mat-toolbar>
+    <mat-toolbar>Menu&nbsp;<span class='small-font'>2.4.5</span></mat-toolbar>
 
     <mat-nav-list>
 
@@ -37,9 +37,23 @@
             <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Manage/ManageLists']">Lists</a>
             <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Manage/BackupDatabase']">Backup</a>
             <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Manage/RestoreDatabase']">Restore</a>
-            <a mat-list-item (click)="changeTheme(drawer)">{{ nextTheme }}&nbsp;&nbsp;<mat-icon fxLayoutAlign="start center" [inline]="true">format_color_fill</mat-icon></a>
-            <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Manage/EditSettings']">Settings&nbsp;&nbsp;<mat-icon fxLayoutAlign="start center" [inline]="true">settings</mat-icon></a>
-
+            <a mat-list-item (click)="changeTheme(drawer)">
+              <div fxLayout="row" fxLayoutGap="10">
+                <div>
+                  {{ nextTheme }}
+                </div>
+                <mat-icon fxLayoutAlign="start center" [inline]="true">format_color_fill</mat-icon>
+              </div>
+              
+            </a>
+            <a mat-list-item href="#" (click)="drawer.toggle()" [routerLink]="['/Manage/EditSettings']">
+              <div fxLayout="row" fxLayoutGap="10">
+                <div>
+                  Settings
+                </div>
+                <mat-icon fxLayoutAlign="start center" [inline]="true">settings</mat-icon>
+              </div>  
+            </a>           
           </mat-expansion-panel>
         </mat-accordion>
 
